[project]
name = "mixpc_mboulila"
version = "0.0.1"
authors = [
  { name="Mahdi Boulila", email="mahdi_boulila@brown.edu" },
]
description = "A mixed precision cost estimator for PyTorch models"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/pypa/mixpc"
Issues = "https://github.com/pypa/mixpc/issues"